syntax = "proto3";

package Ketchup.Permission;

service RpcRole{
	//创建或修改
	rpc CreateOrEdit(RoleDto) returns (RoleDto);
	//分页查询
	rpc PageSerach(SearchRole) returns(RoleList);	
	rpc RemoveRole(RemoveRoleRequest)returns(RemoveRoleResponse);
}

message RoleDto{

	
	///角色名称
	string Name=1;
	///角色备注
	string Remark=2;


}
message RoleList {
	repeated RoleDto Datas = 1;
	int32 Total=2;
}
message SearchRole{
	string RoleName=1;
	int32 PageIndex=2;
	int32 PageMax=3;
}
//删除model
message RemoveRoleRequest{
	int32 Id=1;
}
message RemoveRoleResponse{
	bool IsComplete=1;
}